--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="action_settings">Settings</string>
     <string name="feedback_link">Provide Feedback</string>
     <string name="logout_link">Logout</string>
+
+    <string name="autoplaystatus_off">Off</string>
+    <string name="autoplaystatus_on">On</string>
+    <string name="autoplaystatus_skip">Next news will be skipped</string>
 </resources>
