--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,10 @@
     <string name="feedback_link">Provide Feedback</string>
     <string name="logout_link">Logout</string>
 
+    <string name="speech_button_default">Start</string>
+    <string name="speech_button_off">Start</string>
+    <string name="speech_button_on">Stop</string>
+
     <string name="autoplaystatus_button_default">Autoplay: off</string>
     <string name="autoplaystatus_button_off">Autoplay: off</string>
     <string name="autoplaystatus_button_on">Autoplay: on</string>
